--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
        <!-- Logo -->
        <div class="hide-ball" id="clapat-logo">
         <a class="ajax-link" data-type="page-transition" href="index.html">
-         <img alt="VAT LOGO" class="black-logo" src="images/logo-white.webp"/>
-         <img alt="VAT Logo" class="white-logo" src="images/logo-white.webp"/>
+         <img alt="VAT LOGO" class="black-logo" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/logo-white.webp"/>
+         <img alt="VAT Logo" class="white-logo" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/logo-white.webp"/>
         </a>
        </div>
        <!--/Logo -->
@@ -222,7 +222,7 @@
              <div class="landing-video content-timeline">
                <div class="landing-image content-timeline">
                                             <div class="content-image-wrapper">
-                                                <img src="images/ChatGPT Image Jun 19, 2025, 11_21_42 AM.webp" alt="Model Plane Banner" class="bgimg">
+                                                <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/ChatGPT Image Jun 19, 2025, 11_21_42 AM.webp" alt="Model Plane Banner" class="bgimg">
                                             </div>
                                             </div>
              </div>
@@ -295,7 +295,7 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/01hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/01hero.webp"/>
                </div>
                
                <div class="section-thumb">
@@ -327,7 +327,7 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/02hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/02hero.webp"/>
                </div>
                <div class="section-thumb">
                </div>
@@ -357,9 +357,9 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/03hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/03hero.webp"/>
                </div>
-               <img alt="" class="grid__item-img grid__item-img--large" src="images/03hero.webp"/>
+               <img alt="" class="grid__item-img grid__item-img--large" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/03hero.webp"/>
                <div class="section-thumb">
                </div>
               </div>
@@ -388,9 +388,9 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/04hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/04hero.webp"/>
                </div>
-               <img alt="" class="grid__item-img grid__item-img--large" src="images/04hero.webp"/>
+               <img alt="" class="grid__item-img grid__item-img--large" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/04hero.webp"/>
                <div class="section-thumb">
                </div>
               </div>
@@ -420,9 +420,9 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/05hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/05hero.webp"/>
                </div>
-               <img alt="" class="grid__item-img grid__item-img--large" src="images/05hero.webp"/>
+               <img alt="" class="grid__item-img grid__item-img--large" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/05hero.webp"/>
                <div class="section-thumb">
                </div>
               </div>
@@ -451,9 +451,9 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/06hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/06hero.webp"/>
                </div>
-               <img alt="" class="grid__item-img grid__item-img--large" src="images/06hero.webp"/>
+               <img alt="" class="grid__item-img grid__item-img--large" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/06hero.webp"/>
                <div class="section-thumb">
                </div>
               </div>
@@ -482,9 +482,9 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/07hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/07hero.webp"/>
                </div>
-               <img alt="" class="grid__item-img grid__item-img--large" src="images/07hero.webp"/>
+               <img alt="" class="grid__item-img grid__item-img--large" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/07hero.webp"/>
                <div class="section-thumb">
                </div>
               </div>
@@ -513,9 +513,9 @@
                <a class="slide-link" data-type="page-transition" href="">
                </a>
                <div class="section-image trigger-item-link">
-                <img alt="" class="item-image grid__item-img" src="images/08hero.webp"/>
+                <img alt="" class="item-image grid__item-img" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/08hero.webp"/>
                </div>
-               <img alt="" class="grid__item-img grid__item-img--large" src="images/08hero.webp"/>
+               <img alt="" class="grid__item-img grid__item-img--large" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/08hero.webp"/>
                <div class="section-thumb">
                </div>
               </div>
