--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
           
           <li>
            <span class="parallax-wrap">
-            <a class="parallax-element" href="https://www.instagram.com/clapat.themes">
+            <a class="parallax-element" href="https://www.instagram.com/">
              In
             </a>
            </span>
