--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    VAT
   </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-  <meta content="VAT AVIATION SIMPLIFIED" name="description"/>
+  <meta content="VAT | AVIATION SIMPLIFIED" name="description"/>
   <meta content="VAT" name="author"/>
   <meta content="" property="og:image">
    <meta charset="utf-8"/>
