--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,8 @@
        <!-- Logo -->
        <div class="hide-ball" id="clapat-logo">
         <a class="ajax-link" data-type="page-transition" href="index.html">
-         <img alt="VAT Logo" class="black-logo" src="images/logo.png"/>
-         <img alt="VAT Logo" class="white-logo" src="images/logo-white.png"/>
+         <img alt="VAT Logo" class="black-logo" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/logo-white.webp"/>
+         <img alt="VAT Logo" class="white-logo" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/images/logo-white.webp"/>
         </a>
        </div>
        <!--/Logo -->
