--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
              <hr/>
              <hr/>
              <p class="has-opacity">
-                Crafting exceptional aircraft models tailored to your vision, we blend engineering precision with educational clarity to deliver powerful aviation learning experiences.             </p>
+                Crafting exceptional RPA's tailored to your vision, we blend engineering precision with educational clarity to deliver powerful aviation learning experiences.             </p>
              <div class="button-wrap right button-link has-animation">
               <div class="icon-wrap parallax-wrap">
                <div class="button-icon parallax-element">
