--- a/about.html
+++ b/about.html
@@ -240,10 +240,10 @@
             </div>
             <div class="one_half last">
              <p class="has-indent">
-At <b>VAT Aviation</b>, we don’t just build aerial solutions — <b>we redefine what’s possible in the skies</b>.<br><br>
+At <b>VAT </b>, we don’t just build aerial solutions — <b>we redefine what’s possible in the skies</b>.<br><br>
 
     Founded with a bold vision and backed by <b>over 15 years of hands-on experience</b>,<br>
-    <b>VAT Aviation is a proudly 100% Indian company</b>.<br>
+    <b>VATis a proudly 100% Indian company</b>.<br>which promotes the <b>MAKE IN INDIA initiative</b>
     From blueprint to takeoff, <b>every component, every innovation, every idea is born from our in-house capabilities</b>.<br>
     We do not rely on foreign firms or external suppliers — a rarity in today’s aviation landscape — giving us <b>unmatched control over quality, cost, and customization</b>.<br><br>
 
@@ -255,7 +255,7 @@ At <b>VAT Aviation</b>, we don’t just build aerial solutions — <b>we redefin
     Every project is approached as a collaborative mission, where your vision is shaped by <b>engineering precision and innovation</b>.<br>
     The result? <b>Less product damage</b>, <b>better security integration</b>, and a system <b>designed exactly for your needs</b>.<br><br>
 
-    At the heart of VAT Aviation lies a commitment to <b>continuous R&D</b>, ensuring that we’re not just keeping up with technology — <b>we’re setting the pace</b>.<br>
+    At the heart of VATlies a commitment to <b>continuous R&D</b>, ensuring that we’re not just keeping up with technology — <b>we’re setting the pace</b>.<br>
     Our products are <b>versatile</b>, with <b>diverse operational ranges</b> that cater to industries from defense and agriculture to logistics and surveillance.<br><br>
 
     When you choose VAT Aviation, you're not just investing in a product — you're choosing <b>independence, integrity, and innovation</b> rooted in <b>Indian excellence</b>.
