--- a/index.html
+++ b/index.html
@@ -691,38 +691,38 @@
             <div class="moving-gallery fw-gallery">
              <ul class="wrapper-gallery">
               <li>
-               <img src="images/shortcodes/image01.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image01.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image02.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image02.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image03.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image04.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image04.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image05.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp"/>
               </li>
              </ul>
             </div>
             <div class="moving-gallery bw-gallery">
              <ul class="wrapper-gallery">
               <li>
-               <img src="images/shortcodes/image01.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image06.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image04.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image07.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03"/>
               </li>
               <li>
-               <img src="images/shortcodes/image02.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp"/>
               </li>
               <li>
-               <img src="images/shortcodes/image06.png"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image04.webp"/>
               </li>
              </ul>
             </div>
