--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
        <!-- Row -->
            <div class="content-row full dark-section change-header-color disable-header-gradient" data-bgcolor="#171717">
             <figure class="has-parallax has-parallax-content" data-delay="100">
-             <img alt="Image Title" src="images/header.png"/>
+             <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/header.png"/>
              <div class="parallax-image-content content-full-width text-align-center">
               <div class="outer">
                <div class="inner">
