--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
                <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
               </li>
               <li>
-               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03"/>
+               <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03.webp"/>
               </li>
               <li>
                <img src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp"/>
