--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta content="VAT AVIATION SIMPLIFIED" name="description"/>
-  <meta content="ClaPat Studio" name="author"/>
+  <meta content="VAT INDIA" name="author"/>
   <meta content="" property="og:image">
    <meta charset="utf-8"/>
    <link href="favicon.ico" rel="icon" type="image/ico"/>
