--- a/decor.html
+++ b/decor.html
@@ -8,7 +8,7 @@
   </title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <meta content="VAT AVIATION SIMPLIFIED" name="description"/>
-  <meta content="ClaPat Studio" name="author"/>
+  <meta content="VAT INDIA" name="author"/>
   <meta content="" property="og:image">
    <meta charset="utf-8"/>
    <link href="favicon.ico" rel="icon" type="image/ico"/>
@@ -71,17 +71,17 @@
            </a>
            <ul>
             <li>
-             <a class="ajax-link" data-type="page-transition" href="index-highlights.html">
+             <a class="ajax-link" data-type="page-transition" href="">
               RPA
              </a>
             </li>
             <li>
-             <a class="ajax-link" data-type="page-transition" href="index-portfolio.html">
+             <a class="ajax-link" data-type="page-transition" href="decor.html">
               War Bird Decor
              </a>
             </li>
             <li>
-             <a class="ajax-link" data-type="page-transition" href="index-playground.html">
+             <a class="ajax-link" data-type="page-transition" href="">
               On sight SNAG and support
              </a>
             </li>
