--- a/decor.html
+++ b/decor.html
@@ -88,7 +88,7 @@
            </ul>
           </li>
           <li class="menu-timeline link">
-           <a class="ajax-link" data-type="page-transition" href="resources.html">
+           <a class="ajax-link" data-type="page-transition" href="contact.html">
             <div class="before-span">
              <span data-hover="Contact Us">
               Contact Us
