--- a/decor.html
+++ b/decor.html
@@ -215,8 +215,8 @@
            <div class="content-row full row_padding_top row_padding_left row_padding_right row_padding_bottom light-section text-align-center" data-bgcolor="#c8c8c8">
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="images/shortcodes/image03.png">
-               <img alt="Image Title" src="images/shortcodes/image03.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03.webp"/>
               </a>
               <figcaption>
                Item Customizable
@@ -225,8 +225,8 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="images/shortcodes/image02.png">
-               <img alt="Image Title" src="images/shortcodes/image02.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image02.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image02.webp"/>
               </a>
               <figcaption>
                Item Customizable
@@ -246,8 +246,8 @@
             <div class="content-row full row_padding_top row_padding_left row_padding_right row_padding_bottom light-section text-align-center" data-bgcolor="#c8c8c8"> 
             <div class="one_third">
              <figure class="has-animation has-cover" data-delay="200">
-              <a class="image-link" href="images/shortcodes/image04.png">
-               <img alt="Image Title" src="images/shortcodes/image04.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image04.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image04.webp"/>
               </a>
               <figcaption>
                Item Customizable
@@ -256,8 +256,8 @@
             </div>
             <div class="one_third last">
              <figure class="has-animation has-cover" data-delay="300">
-              <a class="image-link" href="images/shortcodes/image05.png">
-               <img alt="Image Title" src="images/shortcodes/image05.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp"/>
               </a>
               <figcaption>
                Item Customizable
@@ -266,8 +266,8 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="images/shortcodes/image06.png">
-               <img alt="Image Title" src="images/shortcodes/image06.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image06.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image06.webp"/>
               </a>
               <figcaption>
                Image Caption Here
@@ -276,8 +276,8 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="images/shortcodes/image07.png">
-               <img alt="Image Title" src="images/shortcodes/image07.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp">
+               <img alt="Image Title" src="ihttps://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
               </a>
               <figcaption>
                Image Caption Here
@@ -286,8 +286,8 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="images/shortcodes/image08.png">
-               <img alt="Image Title" src="images/shortcodes/image08.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image08.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image08.webp"/>
               </a>
               <figcaption>
                Image Caption Here
@@ -354,7 +354,7 @@
         <div class="footer-middle">
          <div class="copyright">
           2025 
-          <a class="link" href="https://www.clapat.com/" target="_blank">
+          <a class="link" href="https://www.vatindiaorg.com" target="_blank">
            VAT
           </a>
           . All rights reserved.
