--- a/decor.html
+++ b/decor.html
@@ -235,8 +235,8 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="images/shortcodes/image01.png">
-               <img alt="Image Title" src="images/shortcodes/image01.png"/>
+              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image01.webp">
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image01.webp"/>
               </a>
               <figcaption>
                Item Customizable
@@ -270,7 +270,7 @@
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image06.webp"/>
               </a>
               <figcaption>
-               Image Caption Here
+               Item Customizable
               </figcaption>
              </figure>
             </div>
@@ -280,7 +280,7 @@
                <img alt="Image Title" src="ihttps://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
               </a>
               <figcaption>
-               Image Caption Here
+              Image Customizable
               </figcaption>
              </figure>
             </div>
@@ -290,7 +290,7 @@
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image08.webp"/>
               </a>
               <figcaption>
-               Image Caption Here
+               Item Customizable
               </figcaption>
              </figure>
             </div>
