--- a/decor.html
+++ b/decor.html
@@ -300,7 +300,7 @@
                <div class="clapat-button-wrap parallax-wrap hide-ball">
                 <div class="clapat-button parallax-element">
                  <div class="button-border outline rounded parallax-element-second">
-                  <a href="https://themeforest.net/user/clapat/portfolio" target="_blank">
+                  <a href="https://forms.gle/cmA89sVK7ycpkwTXA" target="_blank">
                    <span data-hover="Button Text">
                     Click Here To Buy!
                    </span>
