--- a/decor.html
+++ b/decor.html
@@ -215,7 +215,7 @@
            <div class="content-row full row_padding_top row_padding_left row_padding_right row_padding_bottom light-section text-align-center" data-bgcolor="#c8c8c8">
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image03.webp"/>
               </a>
               <figcaption>
@@ -225,7 +225,7 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image02.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image02.webp"/>
               </a>
               <figcaption>
@@ -235,7 +235,7 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image01.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image01.webp"/>
               </a>
               <figcaption>
@@ -246,7 +246,7 @@
             <div class="content-row full row_padding_top row_padding_left row_padding_right row_padding_bottom light-section text-align-center" data-bgcolor="#c8c8c8"> 
             <div class="one_third">
              <figure class="has-animation has-cover" data-delay="200">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image04.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image04.webp"/>
               </a>
               <figcaption>
@@ -256,7 +256,7 @@
             </div>
             <div class="one_third last">
              <figure class="has-animation has-cover" data-delay="300">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image05.webp"/>
               </a>
               <figcaption>
@@ -266,7 +266,7 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image06.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image06.webp"/>
               </a>
               <figcaption>
@@ -276,7 +276,7 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="ihttps://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
               </a>
               <figcaption>
@@ -286,7 +286,7 @@
             </div>
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
-              <a class="image-link" href="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image08.webp">
+              <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
                <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image08.webp"/>
               </a>
               <figcaption>
