--- a/decor.html
+++ b/decor.html
@@ -277,7 +277,7 @@
             <div class="one_half">
              <figure class="has-animation has-cover" data-delay="100">
               <a class="image-link" href="https://forms.gle/cmA89sVK7ycpkwTXA">
-               <img alt="Image Title" src="ihttps://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
+               <img alt="Image Title" src="https://raw.githubusercontent.com/VatIndia/vatindia/refs/heads/main/shortcodes/image07.webp"/>
               </a>
               <figcaption>
               Image Customizable
