--- a/decor.html
+++ b/decor.html
@@ -301,7 +301,7 @@
                 <div class="clapat-button parallax-element">
                  <div class="button-border outline rounded parallax-element-second">
                   <a href="https://forms.gle/cmA89sVK7ycpkwTXA" target="_blank">
-                   <span data-hover="Button Text">
+                   <span data-hover="Order Warbirds">
                     Click Here To Buy!
                    </span>
                   </a>
