--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </li>
             <li>
              <a class="ajax-link" data-type="page-transition" href="">
-              On sight SNAG and support
+              On site SNAG support
              </a>
             </li>
            </ul>
@@ -535,7 +535,7 @@
               <div class="slide-caption trigger-item-link-secondary">
                <div class="slide-title">
                 <span>
-                AN - 33
+                AN - 32
                 </span>
                </div>
                <div class="slide-date">
