--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
              <hr/>
              <hr/>
              <p class="has-opacity">
-                Crafting exceptional aircraft models tailored to your vision, we blend engineering precision with educational clarity to deliver powerful aviation learning experiences.             </p>
+                Crafting exceptional RPAs tailored to your vision, we blend engineering precision with educational clarity to deliver powerful aviation learning experiences.             </p>
              <div class="button-wrap right button-link has-animation">
               <div class="icon-wrap parallax-wrap">
                <div class="button-icon parallax-element">
@@ -340,7 +340,7 @@
               </span>
               <b>We Engineer It.</b>
                 <br>With 15+ years of hands-on expertise and 59 aircrafts built.
-                <br><b>Creators of the world’s first scaled:- <br>AN-32<br>Spitfire IX.</b>
+                <br><b>Creators of the Spitfire X <br>& <br>world’s first scaled AN-32 RPA,</b>
                 <br>All-India Silver Medalists in aircraft <b>design and build</b>
                 <br>Led by passionate aviation minds.</h6>.             
                                                    
@@ -678,8 +678,8 @@
             Let the legends stand tall — a tribute to India’s sky warriors.
             </h5>
             <p>
-            <b>Bring Warbirds In Your Home</b><br><br>
-            Celebrate India's aviation legacy with precision-crafted warbird replicas — designed for collectors, patriots, and dreamers.<br>Built with unmatched detail and proudly made in India, these scaled models transform any space into a tribute to aerial supremacy.
+            <b>Bring Warbirds legacy In Your Home</b><br><br>
+            Celebrate India's aviation legacy with precision-crafted warbird master pieces — designed for <b></b>collectors, patriots, and dreamers.</b><br>Built with unmatched detail and proudly made in India, these scaled artificats transform any space into a tribute to aerial supremacy.
             </p>
             </p>
             <hr/>
@@ -804,7 +804,7 @@
         <div class="footer-middle">
          <div class="copyright">
           2025 
-          <a class="link" href="https://www.clapat.com/" target="_blank">
+          <a class="link" href="https://www.vatindiaorg.com" target="_blank">
            VAT
           </a>
           . All rights reserved.
@@ -822,8 +822,8 @@
           
           <li>
            <span class="parallax-wrap">
-            <a class="parallax-element" href="https://www.instagram.com/clapat.themes">
-             In
+            <a class="parallax-element" href="https://www.instagram.com/vatindiaorg/">
+             Instagram
             </a>
            </span>
           </li>
