--- a/about.html
+++ b/about.html
@@ -243,22 +243,22 @@
 At <b>VAT </b>, we don’t just build aerial solutions — <b>we redefine what’s possible in the skies</b>.<br><br>
 
     Founded with a bold vision and backed by <b>over 15 years of hands-on experience</b>,<br>
-    <b>VATis a proudly 100% Indian company</b>.<br>which promotes the <b>MAKE IN INDIA initiative</b>
+    <b>VAT is proudly a 100% Indian company</b>.<br>Which promotes the <b>MAKE IN INDIA initiative</b>
     From blueprint to takeoff, <b>every component, every innovation, every idea is born from our in-house capabilities</b>.<br>
-    We do not rely on foreign firms or external suppliers — a rarity in today’s aviation landscape — giving us <b>unmatched control over quality, cost, and customization</b>.<br><br>
+    We do not rely on outsourcing — a rarity in today’s aviation landscape giving us <b>unmatched control over quality, cost, and customization</b>.<br><br>
 
     Our journey started with a simple but ambitious goal: to create <b>robust, intelligent aerial systems</b> that meet real-world demands.<br>
-    Today, our <b>fully customizable RFAs (Remotely Flying Aircraft)</b> are a testament to that vision.<br>
+    Today, our <b>fully customizable RPAs (Remotely Piloted Aircraft)</b> are a testament to that vision.<br>
     Whether navigating harsh terrains or braving extreme weather, our drones are designed to <b>endure, adapt, and deliver</b> with <b>robust hardware</b> and <b>all-terrain, all-weather resilience</b>.<br><br>
 
     What truly sets us apart is our <b>skilled, passionate team</b>, who go beyond building machines — they bring your ideas to life.<br>
     Every project is approached as a collaborative mission, where your vision is shaped by <b>engineering precision and innovation</b>.<br>
-    The result? <b>Less product damage</b>, <b>better security integration</b>, and a system <b>designed exactly for your needs</b>.<br><br>
+    The result? <b>Reinforced hardware</b>, <b>better security integration</b>, and a system <b>designed exactly for your needs</b>.<br><br>
 
-    At the heart of VATlies a commitment to <b>continuous R&D</b>, ensuring that we’re not just keeping up with technology — <b>we’re setting the pace</b>.<br>
-    Our products are <b>versatile</b>, with <b>diverse operational ranges</b> that cater to industries from defense and agriculture to logistics and surveillance.<br><br>
+    At the heart of VAT lies a commitment to have <b>continuous Research & Development (R&D)</b>, ensuring that we’re not just keeping up with the technology <b>we’re setting the pace</b>.<br>
+    Our products are <b>versatile</b>, with <b>diverse operational ranges</b> that cater to industries from <b>Defense</b> and <b>Agriculture</b> to <b>Logistics</b> and <b>Surveillance</b>.<br><br>
 
-    When you choose VAT Aviation, you're not just investing in a product — you're choosing <b>independence, integrity, and innovation</b> rooted in <b>Indian excellence</b>.
+    When you choose VAT, you're not just investing in a product — you're choosing <b>independence, integrity, and innovation</b> rooted in <b>Indian excellence</b>.
 </p>             
             </div>
            </div>
