--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
            <ul>
             <li>
              <a class="ajax-link" data-type="page-transition" href="">
-              RPA
+              RPAs
              </a>
             </li>
             <li>
@@ -82,7 +82,7 @@
             </li>
             <li>
              <a class="ajax-link" data-type="page-transition" href="">
-              On sight SNAG and support
+              On site SNAG support
              </a>
             </li>
            </ul>
