--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
            </a>
            <ul>
             <li>
-             <a class="ajax-link" data-type="page-transition" href="">
+             <a class="ajax-link" data-type="page-transition" href="agriculture.html">
               Agriculture
              </a>
             </li>
